index.css/style.css
#div-data{
    border: 3px solid black;

    min-height: 100px;
}

#div-data:empty::before {
  color: #aaa;

  content: "1\a 2\a 3\a ...";
  white-space: pre; 

}

#div-data-consoleData{
    position: fixed;
    top: 0;
    right: 0;
    background: rgb(0 0 0 / 90%);
    color: white;

    white-space: normal;
    word-break: break-all;
}

